# MultiHeadStack

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MultiHeadStack.h  README.md  SingleHeadTest.cpp  test.cpp
test/: MultiHeadTest.cpp  SingleHeadTest.cpp
